clean up unnecessary guava usage